--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Survey Form</title>
 </head>
 <body>
+
+    <main class="container">
+        <header id="header">
+            <h1 id="title">freeCodeCamp Survey Form</h1>
+            <p id="description">Thank You for taking the time to help us improve the platform</p>
+        </header>
+        <form id="survey-form">
+            <div class="form-group">
+                <label for="name" id="name-label">Name</label>
+                <input type="text" id="name">
+            </div>
+
+        </form>
+
+    </main>
     
 </body>
 </html>
