--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         <form id="survey-form">
             <div class="form-group">
                 <label for="name" id="name-label">Name</label>
-                <input type="text" id="name">
+                <input 
+                type="text" 
+                id="name" 
+                name="name"
+                class="control-label"
+                placeholder="Enter your Name" 
+                required>
             </div>
 
         </form>
