--- a/index.html
+++ b/index.html
@@ -55,6 +55,37 @@
                   <option value="other">Other</option>
                 </select>
               </div>
+
+              <div class="form-group">
+                <p>Would you recommend freeCodeCamp to a friend?</p>
+                <label for="definitely">
+                    <input
+                    type="radio"
+                    name="recommend-by-user"
+                    class="inputs-radio"
+                    value="Definitely"
+                    checked />
+                    Definitely
+                </label>
+                <label for="maybe">
+                    <input
+                    type="radio"
+                    name="recommend-by-user"
+                    class="inputs-radio"
+                    value="Maybe"
+                    checked />
+                    Maybe
+                </label>
+                <label for="notsure">
+                    <input
+                    type="radio"
+                    name="recommend-by-user"
+                    class="inputs-radio"
+                    value="not sure"
+                    checked />
+                    Not Sure
+                </label>
+              </div>
         </form>
     </main>
     
