--- a/index.html
+++ b/index.html
@@ -99,7 +99,100 @@
                 </select>
             </div>
 
+            <div class="form-group">
+                <p>What would you like to see improved?<span class="option">(Check all that apply)</span></p>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Front-end projects"/>
+                    Front-end Projects
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Back-end projects"/>
+                    Back-end Projects
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Data Visualization"/>
+                    Data Visualization
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="challenges"/>
+                    Challenges
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Open Source Community"/>
+                    Open Source Community
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Gitter Help Rooms"/>
+                    Gitter help rooms
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Videos"/>
+                    Videos
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="City meetups"/>
+                    City Meetups
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Wiki"/>
+                    Wiki
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Forums"/>
+                    Forums
+                </label>
+                <label>
+                    <input
+                    type="checkbox"
+                    name="suggestion"
+                    class="inputs-checkbox"
+                    value="Additional courses"/>
+                    Additional Courses
+                </label>
+              </div>
+
         </form>
     </main>
 </body>
 </html>
+
