--- a/index.html
+++ b/index.html
@@ -189,10 +189,23 @@
                     value="Additional courses"/>
                     Additional Courses
                 </label>
-              </div>
+            </div>
+            
+            <div class="form-group">
+                <p>Any comments or suggestions?</p>
+                <textarea
+                id="comments"
+                name="comments"
+                class="input-textarea"
+                rows="15"
+                cols="30"
+                placeholder="Enter your comment here...">
+                </textarea>
+            </div> 
 
         </form>
     </main>
 </body>
 </html>
+
 
