--- a/index.html
+++ b/index.html
@@ -203,9 +203,23 @@
                 </textarea>
             </div> 
 
+            <div class="form-group">
+                <button 
+                type="submit" 
+                id="submit" 
+                class="submit-button">
+                Submit
+                </button>
+            </div>
+                         
         </form>
     </main>
 </body>
 </html>
+
+
+
+
+
 
 
