--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                 <textarea
                 id="comments"
                 name="comments"
-                class="input-textarea"
+                class="inputs-textarea"
                 rows="15"
-                cols="30"
+                cols="20"
                 placeholder="Enter your comment here...">
                 </textarea>
             </div> 
